--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"/>
-      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
